deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deploy-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: devops-app-c5
        image: himani708/ingress:v1
        ports:
        - containerPort: 80
